--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
         ],
         "paths": {
             "@/*": ["./src/*"],
-            "components": ["./src/components/*"]
+            "components": ["./src/components/*"],
+            "whitelabel/*": ["./src/app/whitelabel/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
